--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=AnonBook
+
+spring.datasource.url=jdbc:mysql://localhost:3306/anon
+spring.datasource.username=root
+spring.datasource.password=Mata2208!
+
+spring.jpa.hibernate.ddl-auto=update
